--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 #root {
-  width: 60%;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
   font-size: 1rem;
 }
  body {
   background-color: #F5F7FB;
   color: #293264;
   font-family: 'Inter', sans-serif;
+ }
+
+ .container {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
  }
 
 .onboard {
@@ -147,3 +152,13 @@ gap: 10px;
   padding: 10px 20px;
   font-size: 1rem;
   }
+
+@media screen and (max-width: 760px) {
+  .container {
+    width: 100%;
+  }
+
+  .answers {
+    flex-wrap: wrap;
+  }
+}
